# drm-rs

./: .gitignore  Cargo.toml  build.rs
examples/: legacy_modeset.rs  read.c  read.h
